$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 1.18-11 (opened August 31, 2010)

	* diversity: example says that rarefy(x, 2) - 1 is the same as
	unbiased Simpson of a true random sample of Hurlbert (1971,
	eq. 5). Added after several wishes to have this function.

	* FAQ: entry on ade4:cca name clash triggered by an invalid bug
	report #1066 and queries in r-sig-ecology.
	
Version 1.18-10 (closed August 31, 2010)

	* New version opened with the release of vegan_1.17-4 on August
	20, 2010.

	* rankindex: can take a list of dissimlarity functions as an
	argument. 

	* deviance.cca/rda: return 0 (instead of NULL) if there is no
	residual variation.

	* vegdist: help page gives equations for binary variants of the
	indices. 

	* biplot.CCorA: resets par that it sets.

	* ordiR2step: can go to the end and include all variables of the
	scope (and checks there is a scope).  Additional stopping
	criterion of exceeding P-value. Looks like being up to specs and
	left for approval.

	* permutest.cca: defaults to 99 permutations instead of 100 (to
	be consistent). Item 'call' now stores the call to permutest()
	instead of the call of the ordination which is now saved in
	'testcall'.  This means that update() works now.

	* anova.cca: use correct degrees of freedom when there is no
	constrained or no residual component.

	* anova.ccalist: Started to work on the concept of permutation
	test comparison of several cca/ rda/ capscale models. The basic
	function was added to the R-Forge (undocumented!).  First idea is
	to run permutest.cca with the same RNG seed and collect the
	permutations from the differences of these models.  This won't be
	consistent with other anova.cca* because permuted residuals differ
	from the corresponding partial model (except with model =
	"direct").  Another option that I have on my mind is that I use
	model.matrix.cca to reconstruct a matrix of RHS of each model, and